--- a/index.html
+++ b/index.html
@@ -30,18 +30,26 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h2 class="w3-text-light-grey">INTRODUCTION</h2>
     <hr style="width:200px" class="w3-opacity"> 
     <p>
-    ADMIN of <strong><font face="verdana" color="grey">ak46652.ml</font></strong>, completing Bachelor's Degree from <strong><font face="verdana" color="grey">Mumbai Uiversity</font></strong>.I am Core Member of <strong><font face="verdana" color="grey">GDG-Jalandhar[IN] and DEFCON Group Chandigarh (DC91172)</font></strong> , I have been <strong><font face="verdana" color="grey">"CAMPUS_AMBASSADOR"</font></strong> at <i>RoboTryst'17 IIT DELHI</i> & He has been <strong><font face="verdana" color="grey"> "CAMPUS REPRESENTATIVE"</font></strong>  of <i>CHANDIGARH UNIVERSITY</i> at IIT KGP. I m a part-time Blogger & Co-Founder of <i>INTENSECLICK.COM</i>.  I am a Freelancer and develop Websites.
+    ADMIN of <strong><font face="verdana" color="grey">ak46652.ml</font></strong>, completing Bachelor's Degree from <strong><font face="verdana" color="grey">Mumbai Uiversity</font></strong>.
     </p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
-    <p class="w3-wide">Penetration Testing</p>
+     <p class="w3-wide">Equity Analysis</p>
     <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:90%"></div>
+      <div class="w3-dark-grey" style="height:28px;width:98%"></div>
     </div>
-    <p class="w3-wide">Web Developing</p>
+      <p class="w3-wide">Investing</p>
+    <div class="w3-white">
+      <div class="w3-dark-grey" style="height:28px;width:95%"></div>
+    </div>
+    <p class="w3-wide">HTML</p>
+    <div class="w3-white">
+      <div class="w3-dark-grey" style="height:28px;width:80%"></div>
+    </div>
+    <p class="w3-wide">DATA ANALYSIS</p>
     <div class="w3-white">
       <div class="w3-dark-grey" style="height:28px;width:85%"></div>
     </div>
-    <p class="w3-wide">Ethical Hacking</p>
+    <p class="w3-wide">JAVASCRIPT</p>
     <div class="w3-white">
       <div class="w3-dark-grey" style="height:28px;width:95%"></div>
     </div><br>
